Update for support "Custom Cinnamon Menu" applet
"Custom Cinnamon Menu" is better than original menu applet, and is more customizable. Import config from JSON file.

--- a/ORWin/cinnamon/cinnamon.css
+++ b/ORWin/cinnamon/cinnamon.css
@@ -1610,7 +1610,7 @@ border-right: 1px #0000FF solid;
 .menu-applications-inner-box {
 	padding-top: 10px;	padding-left: 10px;
 	padding-right: 10px;	padding-bottom: 0px;
-	background: rgb(235,235,235); color: #181818;
+	background: #EFEFEF; color: #181818;
 	border-radius: 4px 8px 8px 4px;
 
 }
@@ -1623,7 +1623,9 @@ border-right: 1px #0000FF solid;
 	padding-top: 7px;	padding-left: 7px;
 	padding-right: 7px;	padding-bottom: 7px;
 	color: #181818;
-
+}
+.menu-application-button:last-child {
+	color: #EFEFEF;
 }
 .menu-application-button:highlighted {
 	/* This style is used in menu application buttons for applications which were newly installed */
@@ -1713,18 +1715,19 @@ border-right: 1px #0000FF solid;
 	padding-right: 0px;
 }
 #menu-search-entry {
-	padding: 0px;
+	padding: 5px;
 	border-radius: 0px;
-color: #FFF;
-background: #000;
+color: #DCDCDC;
+background: transparent;
 	selected-color: black;
 	caret-color: rgb(128, 128, 128);
 	caret-size: 1px;
-	width: calc(100% - 0px);
-	height: 0px;
+	width: 200px;
+	height: auto;
 	transition-duration: 300;
 	position: absolute; 
 	top:0;left:0;right:0;bottom:0;
+	font-size: 14px;
 }
 #menu-search-entry:focus,
 #menu-search-entry:hover {
