--- a/ORWin/cinnamon/cinnamon.css
+++ b/ORWin/cinnamon/cinnamon.css
@@ -1506,7 +1506,7 @@ StScrollBar StButton#vhandle:hover {
 #panel {
 	background: rgba(10,10,10,0.75);
 	border-top: 1px #181818 solid;
-	/* border-image:url("resources/bar75.png"); /* Fondo de la barra */
+	 border-image:url("resources/bar75.png"); /* Fondo de la barra */
 	height: 30px; /* Tamaño de la barra */
 }
 /* VENTANAS */
@@ -1563,198 +1563,6 @@ StScrollBar StButton#vhandle:hover {
  * ===================================================================*/
 /* Main menu title */
 
-.menu-favorites-box {
-	margin: auto;
-	padding: 0px;
-	border: 0px solid #666;
-	border-radius: 2px;
-background: rgba(0,0,0,0.0);
-	transition-duration: 300;
-	width: 30px;
-}
-.menu-favorites-button {
-	padding-top: 10px;	padding-left: 10px;
-	padding-right: 10px;	padding-bottom: 10px;
-
-}
-.menu-favorites-button:hover {
-	color: white;
-	background: rgba(255,255,255,0.4);
-	box-shadow: inset 0px 0px 1px 1px rgba(255,255,255,0.06);
-	border-radius: 72px;
-}
-.menu-favorites-button:active {
-	background: rgba(255,255,255,0.8);
-}
-.menu-places-box {
-	margin: auto;	padding: 10px;	border: 0px solid #666;
-}
-.menu-places-button {
-	padding-top: 10px;	padding-left: 10px;	padding-right: 10px;	padding-bottom: 10px;
-}
-.menu-categories-box {
-	padding-top: 10px;	padding-left: 20px;
-	padding-right: 15px;	padding-bottom: 10px;
-	background: rgba(0,0,0,0.0); color: #DFDFDF;
-	/*border-image:url("resources/652.png");*/
-border-right: 1px #0000FF solid;
-
-}
-.menu-applications-inner-box {
-	padding-top: 10px;	padding-left: 10px;
-	padding-right: 10px;	padding-bottom: 0px;
-	background: #EFEFEF; color: #181818;
-	border-radius: 4px 8px 8px 4px;
-
-}
-.menu-applications-outer-box {
-	padding-top: 10px;	padding-left: 10px;
-	padding-right: 10px;	padding-bottom: 0px;
-}
-
-.menu-application-button {
-	padding-top: 7px;	padding-left: 7px;
-	padding-right: 7px;	padding-bottom: 7px;
-	color: #EFEFEF;
-}
-.menu-application-button:last-child {
-	color: #EFEFEF;
-}
-.menu-application-button:highlighted {
-	/* This style is used in menu application buttons for applications which were newly installed */
-	font-weight: bold;
-}
-.menu-application-button-selected {
-	padding-top: 7px;
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-bottom: 7px;
-	color: #FFF;
-	background:rgb(0, 84, 227);
-	box-shadow: inset 0px 0px 1px 1px rgba(255,255,255,0.06);
-	border-radius: 4px;
-}
-.menu-application-button-selected:highlighted {
-	/* This style is used in menu application buttons for applications which were newly installed */
-	font-weight: bold;
-}
-.menu-application-button-label:ltr {
-	padding-left: 5px;
-}
-.menu-application-button-label:rtl {
-	padding-right: 5px;
-}
-.menu-category-button {
-	padding-top: 7px;
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-bottom: 14px;
-	color: #DEDEDE;
-
-}
-.menu-category-button-greyed {
-	padding-top: 7px;
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-bottom: 14px;
-	color: rgba(255,255,255,0.4);
-	font-style: italic;
-}
-.menu-category-button-selected {
-	padding-top: 7px;
-	padding-left: 7px;
-	padding-right: 7px;
-	padding-bottom: 14px;
-	color: #FFF;
-	background:rgb(0, 84, 227);
-	border-radius: 4px;
-}
-.menu-category-button-label:ltr {
-	padding-left: 5px;
-}
-.menu-category-button-label:rtl {
-	padding-right: 5px;
-
-}
-.menu-category-button-button:hover {
-	background-color: #969696;
-	border-radius: 8px;
-}
-/* Name and description of the currently hovered item in the menu
- * This appears on the bottom right hand corner of the menu*/
-.menu-selected-app-box {
-	padding-right: 30px;
-	padding-left: 28px;
-	text-align: right;
-          height: 30px;
-}
-
-.menu-selected-app-box:rtl {
-	padding-top: 10px;
-	height: 30px;
-}
-
-.menu-selected-app-title {
-	font-weight: bold;
-}
-.menu-selected-app-description {
-	max-width: 150px;
-}
-.menu-search-box:ltr {
-	padding-left: 0px;
-}
-.menu-search-box:rtl {
-	padding-right: 0px;
-}
-#menu-search-entry {
-	padding: 5px;
-	border-radius: 0px;
-color: #DCDCDC;
-background: transparent;
-	selected-color: black;
-	caret-color: rgb(128, 128, 128);
-	caret-size: 1px;
-	width: 200px;
-	height: auto;
-	transition-duration: 300;
-	position: absolute; 
-	top:0;left:0;right:0;bottom:0;
-	font-size: 14px;
-}
-#menu-search-entry:focus,
-#menu-search-entry:hover {
-
-}
-#menu-search-entry:hover {
-	transition-duration: 300;
-}
-#menu-search-entry:focus {
-	color: rgb(255, 255, 255);
-	font-weight: normal;
-	transition-duration: 0;
-}
-.menu-search-entry-icon {
-	icon-size: 1em;
-	color: transparent;
-}
-/* Context menu (at the moment only for favorites) */
-.menu-context-menu {
-}
-
-.popup-menu-content {
-	background: rgba(80,0,0,0.0);
-	border: 0px #F00 solid;
-}
-.menu {
-	background: rgba(0,0,0,0.75) url('aero.png') repeat center;
-	border: 1px rgba(100,100,100,0.4) solid;
-	color: #EFEFEF;
-	border-radius: 8px 8px 2px 2px;
-	box-shadow: 1px 1px 16px 4px #000;
-	  -webkit-filter: hue-rotate(90deg);
-  filter: hue-rotate(90deg);
-
-}
 /* Barras de desplazamiento de los menus */
 StScrollBar {
 	padding: 0px;
@@ -1789,33 +1597,6 @@ StScrollBar StButton#vhandle:hover {
 	background-color: rgba(240,240,240,0.8);
 }
 
-.menu-application-button {
-color: #FFFFFF;
-}
-.menu-favorites-box {
-background: transparent;
-color: #EFEFEF;
-border-radius: 30px;
-}
-.menu-favorites-button {
-background: transparent;
-}
-.menu-favorites-button:hover {
-background: rgb(0, 84, 227);
-}
-.menu-application-button-label:last-child {
-font-size: 0.8em;
-color: rgba(240,240,240,0.4);
-}
-.menu-swap-button-windows7 {
-font-size: 0.8em;
-}
-.menu-swap-button-windows7:hover, .menu-swap-button-windows7:active {
-font-size: 0.8em;
-}
-.menu-swap-button-windows7 img {
-display: none;
-}
 
 .osd-window {
 	background: rgba(10,10,10,0.85);
@@ -1830,4 +1611,31 @@ display: none;
 
 notification {
 	background: #39f;
+}
+
+.popup-menu-content {
+	background: rgba(0,0,0,0.85);
+	border: 1px rgba(0,0,0,0.5) solid;
+	border-radius: 2px 2px 0px 0px;
+}
+.menu {
+	background: transparent;
+	color: #FFF;
+	border: 0px rgba(0,0,0,0.75) solid;
+}
+.menu-favorites-box {
+	background: #EFEFEF;
+	color: #282828;
+}
+.menu-favorites-button {
+	background: transparent;
+}
+.menu-favorites-button:hover {
+	background: #39f;
+	color: #FFF;
+}
+#menu-search-entry {
+	background: transparent;
+	color: #000;
+	padding: 10px;
 }
